# rust-sqlite

./: .env.dist  .gitignore  Cargo.toml  README.md  README.server.md  database.db
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  docker-compose.yml
.sqlx/: query-db3eacbeb0cdfbeb8b3c5bdf85d2e325cc938a02110b8c6a1d601e7369c43ece.json  query-f1275d42ab93a2cbfb8bafe96ffe27759006d62470697e67a6cd844f17d37cd5.json
app/: Cargo.toml  database.db
app/new/: Cargo.toml
app/new/src/: main.rs
app/src/: main.rs
app/src/module/: expo_api.rs  mod.rs
app/src/static/: index.html  main.js
migrations/: 20240302084811_create_users_table.up.sql
src/: handler.rs  lib.rs  main.rs
src/domain/: aggregate.rs  interface.rs
src/domain/aggregate/: invoice.rs  value_object.rs
src/domain/aggregate/value_object/: invoice_id.rs  payment.rs  recipient.rs
src/domain/interface/: invoice_repository_interface.rs
src/usecase/: create_invoice.rs
tests/: test.rs
