[package]
name = "manage-money"
version = "0.0.1-alpha"
edition = "2021"
readme = "README.md"
authors = ["katayama8000"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.3"
hyper = "1.0.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
tower-http = { version = "0.5.0", features = ["full"] }
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
chrono = "0.4.34"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tracing = "0.1.40"
shuttle-secrets = "0.39.0"
rand = "0.8.5"
