[package]
name = "app"
version = "0.0.1-alpha"
edition = "2021"
readme = "README.md"
authors = ["katayama8000"]
license = "MIT"
repository = "https://github.com/katayama8000/rust-expo-push-notification-api"
description = "Rust Expo Push Notification API"
keywords = ["rust", "expo"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
